@@ -1,3 +1,8 @@
+2010-03-30  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclIndexObj:	[FRQ 2974744]: share exception codes (ObjType?):
+	* generic/tclResult.c:	further optimization, making use of indexType.
+
 2010-03-30  Donal K. Fellows  <dkf@users.sf.net>
 
 	TIP #362 IMPLEMENTATION
